--- a/css/style.css
+++ b/css/style.css
@@ -3,18 +3,32 @@
   padding:0;
   box-sizing: border-box;
 }
+h1{
+  text-align: center;
+  margin: 20px 0;
+}
 .container{
   display:flex;
   flex-wrap: wrap;
   margin-top:50px;
+  justify-content: space-between;
+  width: 55%;
+  margin: 0 auto;
+  background-color: lightblue
 }
 
 .box {
-
-  border:1px solid black;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  border:1px solid grey;
+  border-radius:5px;
+  margin:10px;
   height: 40px;
-  width: 10%;
+  width: 50px;
   text-align: center;
+  background-color: white;
 }
 
 .casella-cliccata{
