--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   margin:0;
   padding:0;
   box-sizing: border-box;
+  font-family: arial;
 }
 h1{
   text-align: center;
@@ -14,7 +15,8 @@ h1{
   justify-content: space-between;
   width: 55%;
   margin: 0 auto;
-  background-color: lightblue
+  background-color: lightblue;
+  border-radius:10px;
 }
 
 .box {
@@ -25,7 +27,7 @@ h1{
   border:1px solid grey;
   border-radius:5px;
   margin:10px;
-  height: 40px;
+  height: 30px;
   width: 50px;
   text-align: center;
   background-color: white;
