--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,11 @@
 h1{
   text-align: center;
   margin: 20px 0;
+  font-family: 'Akaya Telivigala', cursive;
+  font-size:46px;
+  color:lightblue;
 }
+
 .container{
   display:flex;
   flex-wrap: wrap;
@@ -38,7 +42,7 @@ h1{
   background-color: red;
 }
 
-.casella-none{
+.none{
 
-  display:none;
+  display: none;
 }
